@startuml
'https://plantuml.com/class-diagram

abstract class BaseBuilder
class XMLConfigBuilder
class XMLMapperBuilder
class XMLStatementBuilder
class XMLScriptBuilder

BaseBuilder <|-- XMLStatementBuilder
BaseBuilder <|-- XMLConfigBuilder
BaseBuilder <|-- XMLMapperBuilder
BaseBuilder <|-- XMLScriptBuilder

@enduml